Implemented organizations API for HSDS compliance
