# config/routes.rb
@@ -9,7 +9,6 @@ Rails.application.routes.draw do
       get :counts
       get :featured
       get :subcategories
-      get :hierarchy
     end
   end
   resources :eligibilities, only: %i[index show update] do
@@ -26,14 +25,14 @@ Rails.application.routes.draw do
     post :create
     post :certify
 
+    resources :ratings, only: :create
     resources :change_requests, only: :create
     resources :services, only: :create
-    resources :feedbacks, only: %i[create index]
   end
   resources :services do
+    resources :ratings, only: :create
     resources :change_requests, only: :create
     resources :notes, only: :create
-    resources :feedbacks, only: %i[create index]
     post :approve
     post :reject
     post :certify
@@ -44,6 +43,9 @@ Rails.application.routes.draw do
     end
   end
   resources :notes do
+    resources :change_requests, only: :create
+  end
+  resources :organizations do
     resources :change_requests, only: :create
   end
   resources :addresses do
