# swagger/v1/swagger.json
@@ -1590,6 +1590,110 @@
           "application/json"
         ]
       }
+    },
+
+    "/phones/{id}": {
+      "get": {
+        "responses": {
+          "200": {
+            "examples": {
+              "application/json": {
+                    "id": "string",
+                    "number": "string",
+                    "extension": "string",
+                    "service_type": "string",
+                    "country_code": "string"
+              }
+            },
+            "description": "Phone Response"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "description": "Phone ID",
+            "required": true
+          }
+        ],
+        "tags": [
+          "phones"
+        ],
+        "summary": "Retrieves phone numbers by id",
+        "produces" : [
+          "application/json"
+        ]
+      }
+    },
+    "/organizations": {
+      "get": {
+        "responses": {
+          "200": {
+            "examples": {
+              "application/json": {
+                "id": "string",
+                "name": "string",
+                "alternate_name": "string",
+                "description": "string",
+                "email": "string",
+                "url": "string",
+                "tax_status": "string",
+                "tax_id": "string",
+                "year_incorporated": "string",
+                "legal_status": "string"
+              }
+            },
+            "description": "Organization Response"
+          }
+        },
+        "tags": [
+          "organizations"
+        ],
+        "summary": "Retrieves all organizations",
+        "produces" : [
+          "application/json"
+        ]
+      }
+    },
+    "/organizations/{id}": {
+      "get": {
+        "responses": {
+          "200": {
+            "examples": {
+              "application/json": {
+                "id": "string",
+                "name": "string",
+                "alternate_name": "string",
+                "description": "string",
+                "email": "string",
+                "url": "string",
+                "tax_status": "string",
+                "tax_id": "string",
+                "year_incorporated": "string",
+                "legal_status": "string"
+              }
+            },
+            "description": "Organization Response"
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "type": "integer",
+            "description": "Resource ID",
+            "required": true
+          }
+        ],
+        "tags": [
+          "organizations"
+        ],
+        "summary": "Retrieves organization by id",
+        "produces" : [
+          "application/json"
+        ]
+      }
     }
   }
 }
